--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -1,16 +1,16 @@
 features:
   #all: true
-  login: true
+  login: false
   workshops: false
   workshop_choices: false
-  motto: true
-  haus: true
-  zeitplan: true
-  team: true
+  motto: false
+  haus: false
+  zeitplan: false
+  team: false
   mithelfen: false
-  help: true
+  help: false
   music_wishes: false
   algorithm: false
-  no_more_registrations: true
-  final_workshop_choices: true
-  photos: true
+  no_more_registrations: false
+  final_workshop_choices: false
+  photos: false
