--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -1,15 +1,16 @@
-basic_auth:
-  name: 'but-team'
-  password: 'eawWekecog'
 features:
-  login: true
-  workshops: true
-  workshop_choices: true
-  motto: true
-  haus: true
-  zeitplan: true
-  team: true
-  mithelfen: true
-  help: true
-  music_wishes: true
-  algorithm: true
+  #all: true
+  login: false
+  workshops: false
+  workshop_choices: false
+  motto: false
+  haus: false
+  zeitplan: false
+  team: false
+  mithelfen: false
+  help: false
+  music_wishes: false
+  algorithm: false
+  no_more_registrations: false
+  final_workshop_choices: false
+  photos: false
