--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,12 @@ db:
     POSTGRES_PASSWORD: but
 web:
   build: .
-  command: bundle exec rails s -p 3000 -b '0.0.0.0'
+  command: sleep 100000000
   volumes:
     - .:/app
   ports:
     - '3000:3000'
   links:
     - db
+  environment:
+    BUNDLE_PATH: /vendor
