--- a/config/database.yml
+++ b/config/database.yml
@@ -6,10 +6,10 @@
 development:
   adapter: postgresql
   encoding: unicode
-  #host: db
-  database: but-development
-  username: perl
-  #password: but
+  host: db
+  database: but
+  username: but
+  password: but
   pool: 4
 
 # Warning: The database defined as "test" will be erased and
