--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -1,10 +1,16 @@
 features:
-  login: true
-  workshops: true
-  workshop_choices: true
-  motto: true
-  haus: true
-  zeitplan: true
-  team: true
-  mithelfen: true
-  help: true
+  #all: true
+  login: false
+  workshops: false
+  workshop_choices: false
+  motto: false
+  haus: false
+  zeitplan: false
+  team: false
+  mithelfen: false
+  help: false
+  music_wishes: false
+  algorithm: false
+  no_more_registrations: false
+  final_workshop_choices: false
+  photos: false
