--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ after_success:
   - openssl aes-256-cbc -K $encrypted_0a6522409bbf_key -iv $encrypted_0a6522409bbf_iv -in config/jubi_id_rsa.enc -out config/jubi_id_rsa -d
 deploy:
   provider: script
-  script: bundle exec cap staging deploy
+  script: cap staging deploy
   on:
     branch: staging
 
