--- a/config/settings.yml
+++ b/config/settings.yml
@@ -16,19 +16,17 @@ prices:
     3: -10.00
     4: -15.00
   rooms:
-    dorm: 0.00
-    no_room: 0.00
-    dorm_with_bath: 5.00
-    double_room: 15.00
-    family_room: 15.00
-    single_room: 20.00
+    Accomodation::Dorm: 0.00
+    Accomodation::NoRoom: 0.00
+    Accomodation::DoubleRoom: 15.00
+    Accomodation::FamilyRoom: 15.00
+    Accomodation::SingleRoom: 20.00
 room_allocations:
-  dorm: 100
-  no_room: '∞'
-  dorm_with_bath: 100
-  double_room: 100
-  family_room: 100
-  single_room: 100
+  Accomodation::Dorm: 100
+  Accomodation::NoRoom: '∞'
+  Accomodation::DoubleRoom: 100
+  Accomodation::FamilyRoom: 100
+  Accomodation::SingleRoom: 100
 dates:
   early_bird_registration_passed: 2015-01-01
   registrations_frozen: 2015-04-15
